# bonneagar

./: .gitattributes  AGENTS.md  DEPLOYMENT-STRATEGY.md  GOLD_STANDARD.md  PANGOLIN-SETUP.md  QUADRANT-TO-STACK-MAP.md  README  README.md  SECRETS-MANAGEMENT.md  package.json  pyproject.toml  renovate.json  tsconfig.json
.devcontainer/: Dockerfile  devcontainer.json
ansible/: README.md  compose.yaml  secrets.env
api_specs/: API_ARCHITECTURE_ANALYSIS.md  QUICK_REFERENCE.md  agno.json  apis.md  cognee-openapi.json  defillama-api(1).json
audit/: README.md
browser/: Dockerfile  compose.yaml  litellm_config.yaml  pyproject.toml  test_stagehand_grid.py
browser/agent_os/: __init__.py  config.yaml  main.py
browser/browser-grid/: Dockerfile  launch.js
browser/sruth_browser/: __init__.py  browser_types.py  config.py  credit_budget.py  exceptions.py
browser/sruth_browser/adapters/: __init__.py  registry.py
browser/sruth_browser/agents/: __init__.py  durable_orchestrator.py  gatherer.py  hunter.py  orchestrator.py
browser/sruth_browser/backends/: __init__.py  base.py  router.py
browser/sruth_browser/backends/paid/: browserbase.py  zai_backend.py  zai_mcp_client.py
browser/sruth_browser/backends/selfhosted/: skyvern_backend.py  stagehand_backend.py
browser/sruth_browser/client/: http_client.py
browser/sruth_browser/core/: config.py  exceptions.py  llm_router.py  restate.py
browser/sruth_browser/frontend/: event_bus.py
browser/sruth_browser/frontend/adapters/: __init__.py  agui.py  mcp_ui.py  tanstack.py
browser/sruth_browser/frontend/convex/: events.ts  schema.ts
browser/sruth_browser/knowledge/: __init__.py  selector_cache.py  site_memory.py
browser/sruth_browser/mcp/: tools.py
browser/sruth_browser/tools/: __init__.py  approval.py  canuint_scraper.py  duchas_scraper.py  examinations_scraper.py  extraction.py  forms.py  navigation.py  research.py  screenshot.py  zai_tools.py
browser/stagehand-server/: .env.example  Dockerfile  README.md
browser/stagehand-server/src/: index.ts  session-store.ts
browser/stagehand-server/src/fallback/: detector.ts
browser/tests/: test_backend_router.py  test_config.py  test_scrape_strategist.py
browser/tests/fixtures/html_samples/: simple_page.html
ci/: README.md  spaces-sync.yml
dagger/: README.md  dagger.json  pyproject.toml
dagger/.forgejo/workflows/: ci.yaml  deploy.yaml
dagger/cianchoghlaim_dagger/: __init__.py
dagger/templates/: secrets.data.env.template  secrets.env.template  secrets.web.env.template  sidecar.yaml.template
dagger/ts_submodules/bonneagar/: README.md  dagger.json  package.json  tsconfig.json
dagger/ts_submodules/bonneagar/src/: apps.ts  auth-stack.ts  auth.ts  blockchain.ts  browser.ts  ci.ts  cloudflare.ts  dev-environment.ts  forgejo.ts  github-sync.ts  gitops.ts  index.ts  infrastructure.ts  komodo.ts  mcp-types.ts  mcp.ts  memory.ts  microfrontends.ts  ml.ts  observability.ts  orchestration.ts  package.json  pangolin-api.ts  pangolin-labels.ts  pangolin.ts  periphery.ts  python.ts  rust.ts  secrets.ts  service-clients.ts  services.ts  types.ts  typescript.ts  vectordb.ts  workspace.ts
deploy-runbooks/: ansible.md  bytebase.md  cal-diy.md  changedetection.md  infisical.md  komodo.md  n8n.md  pangolin.md  vikunja.md
docs/: .!31103!monorepo-best-practices-2025.md  overview.md  pulumi.md  user-guide.md
iac/: README.md  auth.ts  cli.ts  config.ts  diff.ts
infisical/: README.md  blueprint.yaml  pangolin.yaml  sidecar.yaml
komodo/: README.md  core.compose.yaml  deploy.sh
legacy/: ANALYSIS.md  LOCKET-MODES.md  README.md  ansible.ts  cloudflare-dns.ts  (+3 more)
(+1564 files in other folders)
