[project]
name = "default"
version = "0.1.0"

requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
    "pulumi",
    "pulumi-hcloud",
    "pulumi-oci",
    "pulumi-aws",
    "pulumi-azure",
    "pulumi-gcp",
    "pulumi-onepassword",
    "marimo"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
