[project]
name = "sruth-browser"
version = "0.1.0"
description = "Browser automation client with circuit breaker fallback for sruth pipelines"
requires-python = ">=3.12"
dependencies = [
    # Async HTTP clients
    "httpx>=0.27.0",
    "aiohttp>=3.9.0",
    "websockets>=12.0",

    # Stagehand Official Python SDK
    "stagehand[aiohttp]>=3.7.0",

    # Data validation
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",

    # Web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "sse-starlette>=2.0.0",

    # Utilities
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
agents = [
    # Google ADK for agent orchestration
    "google-adk>=1.0.0",
    # Agno for RAG/knowledge
    "agno>=2.0.0",
]
mcp = [
    "mcp>=1.0.0",
]
baml = [
    # BAML for type-safe extraction
    "baml-py>=0.80.0",
]
browser = [
    # CDP/Browser control
    "playwright>=1.40.0",
    # Vector storage
    "lancedb>=0.5.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-httpx>=0.30.0",
    "respx>=0.21.0",
    "ruff>=0.1.0",
    "mypy>=1.8.0",
]
all = [
    "sruth-browser[agents,mcp,baml,browser]",
]

[project.scripts]
sruth-browser-mcp = "sruth_browser.mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ============================================================================
# UV Workspace — sruth-browser is a member of the root cianfhoghlaim workspace.
# ============================================================================
[tool.uv]
package = true

[tool.hatch.build.targets.wheel]
packages = ["sruth_browser"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::UserWarning",
]
