[project]
name = "cianchoghlaim-dagger"
version = "0.1.0"
description = "Cianfhoghlaim Dagger module — Python root that orchestrates 3 pipelines (infrastructure, web, data) and delegates to the prior bonneagar TypeScript submodule. Part of the dagger-monorepo-integration OpenSpec change."
requires-python = ">=3.12"
readme = "README.md"

[project.entry-points."dagger.mod"]
main_object = "cianchoghlaim_dagger:CianchoghlaimDagger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["cianchoghlaim_dagger"]
